fix(vercel): enforce SPA rewrite from repo root (remove duplicate vercel.json)

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
   "rewrites": [
-    { "source": "./admin/(.*)", "destination": "/" },
-    { "source": "/*", "destination": "/" }
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
